# existentials-on-a-leash

./: .envrc  .gitignore  LICENSE  README.md  _config.yml  existentials-on-a-leash.cabal  existentials-on-a-leash.hs  existentials-on-a-leash.lhs  existentials-on-a-leash.md  flake.nix  fourmolu.yaml  shell.nix
.devcontainer/: devcontainer copy.json  devcontainer.json  docker-compose.yml
